temporary fix for group admin groups